# ProMan

./: .gitignore  CONTRIBUTING.md  INSTALL.txt  LICENSE  README.md  build.sh  install.sh  meson.build  online.sheldi.proman.json  release.sh
aur/: PKGBUILD
data/: meson.build  online.sheldi.proman.desktop.in  online.sheldi.proman.gschema.xml  online.sheldi.proman.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: meson.build
src/: Application.vala  Config.vala.in  MainWindow.vala  NewProjectDialog.vala  Project.vala  ProjectManager.vala  ProjectRow.vala  Settings.vala  SettingsDialog.vala  Utils.vala  meson.build
